added page-header for page 'courses (admin)' without adaptive versions

--- a/src/courses-admin.html
+++ b/src/courses-admin.html
@@ -46,147 +46,172 @@
 
   <div class="page-header page-header--courses">
     <div class="container container--small">
-      
-      <ul class="user-courses__nav">
-        <li class="user-courses__nav-item user-courses__nav-item--active">
-          <a href="#" class="link-with-number js-tab-control" data-target="all-courses">All <span class="link-with-number__value">45</span></a>
-        </li>
-        <li class="user-courses__nav-item">
-          <a href="#" class="link-with-number js-tab-control" data-target="my-courses">My <span class="link-with-number__value">5</span></a>
-        </li>
-      </ul>
+      <div class="user-courses">
+        <div class="row">
+          <div class="col-md-6 col-sm-6 col-xs-12">
+            <div class="user-courses__title">Courses <a href="#" class="btn btn--submit btn--add">Add course</a></div>
+            <p class="user-courses__status">You see ATC courses only</p>
+            <ul class="user-courses__stat">
+              <li class="user-courses__stat-group">
+                <div class="user-courses__stat-item"><span class="user-courses__stat-count">48</span> courses</div>
+                <div class="user-courses__stat-item"><span class="user-courses__stat-count">244</span> sections</div>
+              </li>
+              <li class="user-courses__stat-group">
+                <div class="user-courses__stat-item"><span class="user-courses__stat-count">88h</span> video</div>
+                <div class="user-courses__stat-item"><span class="user-courses__stat-count">785h</span> watched</div>
+              </li>
+              <li class="user-courses__stat-group">
+                <div class="user-courses__stat-item"><span class="user-courses__stat-count">180</span> tests</div>
+                <div class="user-courses__stat-item"><span class="user-courses__stat-count">82%</span> correct</div>
+              </li>
+            </ul>
+          </div>
+          <div class="col-md-6 col-sm-6 col-xs-12 mobile-hide">
+            <a href="#" class="link-with-number">Announcements <span class="link-with-number__value">2</span></a>
+            <a href="#" class="btn btn--show-all user-courses__link">Show all announcements</a>
+            <div class="notice-text notice-text--success">22 Section added to course <a href="#">3998 Weather forecasts</a></div>
+            <div class="notice-text notice-text--danger">You have 2 overdue courses. Please, complete it asap.</div>
+          </div>
+        </div>
+        <ul class="user-courses__nav">
+          <li class="user-courses__nav-item user-courses__nav-item--active">
+            <a href="#" class="link-with-number js-tab-control" data-target="all-courses">All <span class="link-with-number__value">45</span></a>
+          </li>
+          <li class="user-courses__nav-item">
+            <a href="#" class="link-with-number js-tab-control" data-target="my-courses">My <span class="link-with-number__value">5</span></a>
+          </li>
+        </ul>
+      </div>
     </div>
   </div>
 
   <div class="container container--small">
-  <div class="courses js-tab-container">
-    <section class="courses-list js-tab js-tab--active all-courses">
-      <header class="courses-list__header">
-        <div class="courses-list__col courses-list__col--6">
-          <h3 class="courses-list__title">Courses</h3>
-        </div>
-        <div class="courses-list__col courses-list__col--3 tablet-hide">
-          <div class="courses-list__sub-title">instructor(s)</div>
-        </div>
-        <div class="courses-list__col courses-list__col--7 tablet-hide">
-          <div class="courses-list__sub-title text-right">progress</div>
-        </div>
-      </header>
-      <!-- course -->
-      <div class="course-preview">
-        <div class="course-preview__col course-preview__col--1">
-          <a href="#" class="course-preview__image">
-            <img src="img/course-bg-1.jpg" alt="">
-          </a>
-        </div>
-        <div class="course-preview__col course-preview__col--4">
-          <div class="course-preview__col course-preview__col--4-1">
-            <a href="#" class="course-preview__title">3496 Aviation Weather Forecasts course</a>
-            <span class="course-preview__time">9h 20m</sapn>, 
-            <p class="course-preview__about course-preview__about--inline">Elective, every year <span class="text-success">repeat until 26.03.2017</span></p>
-            <a href="#" class="btn btn--gray-edit tablet-hide">Edit</a>
+    <div class="courses js-tab-container">
+      <section class="courses-list js-tab js-tab--active all-courses">
+        <header class="courses-list__header">
+          <div class="courses-list__col courses-list__col--6">
+            <h3 class="courses-list__title">Courses</h3>
           </div>
-          <div class="course-preview__col course-preview__col--4-2 mobile-hide">
-            <a href="#" class="course-preview__instr">Adam Mccarthy</a>,
-            <a href="#" class="course-preview__instr">Joan Simpson</a>
+          <div class="courses-list__col courses-list__col--3 tablet-hide">
+            <div class="courses-list__sub-title">instructor(s)</div>
           </div>
-        </div>
-        <div class="course-preview__col course-preview__col--5">
-          <div class="progress-line">
-            <div class="progress-line__legend">
-              <span class="progress-line__done">2 </span><a href="#" class="progress-line__link">done</a>,
-              <span class="progress-line__progress">7 </span><a href="#" class="progress-line__link">in progress</a>,
-              <span class="progress-line__not">9 </span><a href="#" class="progress-line__link">not started</a>,
-              <span class="progress-line__overdue">3 </span><a href="#" class="progress-line__link">overdue</a>
+          <div class="courses-list__col courses-list__col--7 tablet-hide">
+            <div class="courses-list__sub-title text-right">progress</div>
+          </div>
+        </header>
+        <!-- course -->
+        <div class="course-preview">
+          <div class="course-preview__col course-preview__col--1">
+            <a href="#" class="course-preview__image">
+              <img src="img/course-bg-1.jpg" alt="">
+            </a>
+          </div>
+          <div class="course-preview__col course-preview__col--4">
+            <div class="course-preview__col course-preview__col--4-1">
+              <a href="#" class="course-preview__title">3496 Aviation Weather Forecasts course</a>
+              <span class="course-preview__time">9h 20m</sapn>, 
+              <p class="course-preview__about course-preview__about--inline">Elective, every year <span class="text-success">repeat until 26.03.2017</span></p>
+              <a href="#" class="btn btn--gray-edit tablet-hide">Edit</a>
             </div>
-            <ul class="progress-line__bar">
-              <li class="progress-line__bar-line progress-line__bar-line--done" style="width:40%;"></li>
-              <li class="progress-line__bar-line progress-line__bar-line--progress" style="width:10%;"></li>
-              <li class="progress-line__bar-line progress-line__bar-line--not" style="width:20%;"></li>
-              <li class="progress-line__bar-line progress-line__bar-line--overdue" style="width:30%;"></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <!-- course -->
-      <div class="course-preview">
-        <div class="course-preview__col course-preview__col--1">
-          <a href="#" class="course-preview__image">
-            <img src="img/course-bg-2.jpg" alt="">
-          </a>
-        </div>
-        <div class="course-preview__col course-preview__col--4">
-          <div class="course-preview__col course-preview__col--4-1">
-            <a href="#" class="course-preview__title">3006 Abbreviations and Symbols course</a>
-            <span class="course-preview__time">5h 30 m</span>,
-            <p class="course-preview__about course-preview__about--inline">Obligatory, every year</p>
-            <a href="#" class="btn btn--gray-edit tablet-hide">Edit</a>
-          </div>
-          <div class="course-preview__col course-preview__col--4-2 mobile-hide">
-            <a href="#" class="course-preview__instr">Joan Simpson</a>
-          </div>
-        </div>
-        <div class="course-preview__col course-preview__col--5">
-          <div class="progress-line">
-            <div class="progress-line__legend">
-              <span class="progress-line__done">12 </span><a href="#" class="progress-line__link">done</a>,
-              <span class="progress-line__overdue">3 </span><a href="#" class="progress-line__link">overdue</a>
+            <div class="course-preview__col course-preview__col--4-2 mobile-hide">
+              <a href="#" class="course-preview__instr">Adam Mccarthy</a>,
+              <a href="#" class="course-preview__instr">Joan Simpson</a>
             </div>
-            <ul class="progress-line__bar">
-              <li class="progress-line__bar-line progress-line__bar-line--done" style="width:70%;"></li>
-              <li class="progress-line__bar-line progress-line__bar-line--overdue" style="width:30%;"></li>
-            </ul>
           </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="courses-list js-tab my-courses">
-      <header class="courses-list__header">
-        <div class="courses-list__col courses-list__col--6">
-          <h3 class="courses-list__title">Courses</h3>
-        </div>
-        <div class="courses-list__col courses-list__col--3 tablet-hide">
-          <div class="courses-list__sub-title">instructor(s)</div>
-        </div>
-        <div class="courses-list__col courses-list__col--7 tablet-hide">
-          <div class="courses-list__sub-title text-right">progress</div>
-        </div>
-      </header>
-      <!-- course -->
-      <div class="course-preview">
-        <div class="course-preview__col course-preview__col--1">
-          <a href="#" class="course-preview__image">
-            <img src="img/course-bg-2.jpg" alt="">
-          </a>
-        </div>
-        <div class="course-preview__col course-preview__col--4">
-          <div class="course-preview__col course-preview__col--4-1">
-            <a href="#" class="course-preview__title">3006 Abbreviations and Symbols course</a>
-            <span class="course-preview__time">5h 30 m</span>,
-            <p class="course-preview__about course-preview__about--inline">Obligatory, every year</p>
-            <a href="#" class="btn btn--gray-edit tablet-hide">Edit</a>
-          </div>
-          <div class="course-preview__col course-preview__col--4-2 mobile-hide">
-            <a href="#" class="course-preview__instr">Joan Simpson</a>
-          </div>
-        </div>
-        <div class="course-preview__col course-preview__col--5">
-          <div class="progress-line">
-            <div class="progress-line__legend">
-              <span class="progress-line__done">12 </span><a href="#" class="progress-line__link">done</a>,
-              <span class="progress-line__overdue">3 </span><a href="#" class="progress-line__link">overdue</a>
+          <div class="course-preview__col course-preview__col--5">
+            <div class="progress-line">
+              <div class="progress-line__legend">
+                <span class="progress-line__done">2 </span><a href="#" class="progress-line__link">done</a>,
+                <span class="progress-line__progress">7 </span><a href="#" class="progress-line__link">in progress</a>,
+                <span class="progress-line__not">9 </span><a href="#" class="progress-line__link">not started</a>,
+                <span class="progress-line__overdue">3 </span><a href="#" class="progress-line__link">overdue</a>
+              </div>
+              <ul class="progress-line__bar">
+                <li class="progress-line__bar-line progress-line__bar-line--done" style="width:40%;"></li>
+                <li class="progress-line__bar-line progress-line__bar-line--progress" style="width:10%;"></li>
+                <li class="progress-line__bar-line progress-line__bar-line--not" style="width:20%;"></li>
+                <li class="progress-line__bar-line progress-line__bar-line--overdue" style="width:30%;"></li>
+              </ul>
             </div>
-            <ul class="progress-line__bar">
-              <li class="progress-line__bar-line progress-line__bar-line--done" style="width:70%;"></li>
-              <li class="progress-line__bar-line progress-line__bar-line--overdue" style="width:30%;"></li>
-            </ul>
           </div>
         </div>
-      </div>
-    </section>
-  </div>
-
+        <!-- course -->
+        <div class="course-preview">
+          <div class="course-preview__col course-preview__col--1">
+            <a href="#" class="course-preview__image">
+              <img src="img/course-bg-2.jpg" alt="">
+            </a>
+          </div>
+          <div class="course-preview__col course-preview__col--4">
+            <div class="course-preview__col course-preview__col--4-1">
+              <a href="#" class="course-preview__title">3006 Abbreviations and Symbols course</a>
+              <span class="course-preview__time">5h 30 m</span>,
+              <p class="course-preview__about course-preview__about--inline">Obligatory, every year</p>
+              <a href="#" class="btn btn--gray-edit tablet-hide">Edit</a>
+            </div>
+            <div class="course-preview__col course-preview__col--4-2 mobile-hide">
+              <a href="#" class="course-preview__instr">Joan Simpson</a>
+            </div>
+          </div>
+          <div class="course-preview__col course-preview__col--5">
+            <div class="progress-line">
+              <div class="progress-line__legend">
+                <span class="progress-line__done">12 </span><a href="#" class="progress-line__link">done</a>,
+                <span class="progress-line__overdue">3 </span><a href="#" class="progress-line__link">overdue</a>
+              </div>
+              <ul class="progress-line__bar">
+                <li class="progress-line__bar-line progress-line__bar-line--done" style="width:70%;"></li>
+                <li class="progress-line__bar-line progress-line__bar-line--overdue" style="width:30%;"></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="courses-list js-tab my-courses">
+        <header class="courses-list__header">
+          <div class="courses-list__col courses-list__col--6">
+            <h3 class="courses-list__title">Courses</h3>
+          </div>
+          <div class="courses-list__col courses-list__col--3 tablet-hide">
+            <div class="courses-list__sub-title">instructor(s)</div>
+          </div>
+          <div class="courses-list__col courses-list__col--7 tablet-hide">
+            <div class="courses-list__sub-title text-right">progress</div>
+          </div>
+        </header>
+        <!-- course -->
+        <div class="course-preview">
+          <div class="course-preview__col course-preview__col--1">
+            <a href="#" class="course-preview__image">
+              <img src="img/course-bg-2.jpg" alt="">
+            </a>
+          </div>
+          <div class="course-preview__col course-preview__col--4">
+            <div class="course-preview__col course-preview__col--4-1">
+              <a href="#" class="course-preview__title">3006 Abbreviations and Symbols course</a>
+              <span class="course-preview__time">5h 30 m</span>,
+              <p class="course-preview__about course-preview__about--inline">Obligatory, every year</p>
+              <a href="#" class="btn btn--gray-edit tablet-hide">Edit</a>
+            </div>
+            <div class="course-preview__col course-preview__col--4-2 mobile-hide">
+              <a href="#" class="course-preview__instr">Joan Simpson</a>
+            </div>
+          </div>
+          <div class="course-preview__col course-preview__col--5">
+            <div class="progress-line">
+              <div class="progress-line__legend">
+                <span class="progress-line__done">12 </span><a href="#" class="progress-line__link">done</a>,
+                <span class="progress-line__overdue">3 </span><a href="#" class="progress-line__link">overdue</a>
+              </div>
+              <ul class="progress-line__bar">
+                <li class="progress-line__bar-line progress-line__bar-line--done" style="width:70%;"></li>
+                <li class="progress-line__bar-line progress-line__bar-line--overdue" style="width:30%;"></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
   </div>
 
   <footer class="footer">
