added adaptive versions  for all blocks for page 'courses (admin)'

--- a/src/courses-admin.html
+++ b/src/courses-admin.html
@@ -49,7 +49,7 @@
       <div class="user-courses">
         <div class="row">
           <div class="col-md-6 col-sm-6 col-xs-12">
-            <div class="user-courses__title">Courses <a href="#" class="btn btn--submit btn--add">Add course</a></div>
+            <div class="user-courses__title h1">Courses <a href="#" class="btn btn--submit btn--add">Add course</a></div>
             <p class="user-courses__status">You see ATC courses only</p>
             <ul class="user-courses__stat">
               <li class="user-courses__stat-group">
@@ -66,11 +66,11 @@
               </li>
             </ul>
           </div>
-          <div class="col-md-6 col-sm-6 col-xs-12 mobile-hide">
+          <div class="col-md-6 col-sm-6 col-xs-12">
             <a href="#" class="link-with-number">Announcements <span class="link-with-number__value">2</span></a>
             <a href="#" class="btn btn--show-all user-courses__link">Show all announcements</a>
-            <div class="notice-text notice-text--success">22 Section added to course <a href="#">3998 Weather forecasts</a></div>
-            <div class="notice-text notice-text--danger">You have 2 overdue courses. Please, complete it asap.</div>
+            <div class="notice-text notice-text--success mobile-hide">22 Section added to course <a href="#">3998 Weather forecasts</a></div>
+            <div class="notice-text notice-text--danger mobile-hide">You have 2 overdue courses. Please, complete it asap.</div>
           </div>
         </div>
         <ul class="user-courses__nav">
