--- a/src/courses.html
+++ b/src/courses.html
@@ -48,7 +48,7 @@
             <div class="status-text status-text--danger">2 courses overdue</div>
             <div class="status-text status-text--warning">1 course not started</div>
           </div>
-          <div class="col-md-6 col-sm-6 col-xs-12 mobile-hide">
+          <div class="col-md-6 col-sm-6 mobile-hide">
             <a href="#" class="link-with-number">Announcements <span class="link-with-number__value">2</span></a>
             <a href="#" class="btn btn--show-all user-courses__link">Show all announcements</a>
             <div class="notice-text notice-text--success">2 Section added to course <a href="#">Weather forecasts</a>. They are marked as not completed now, please, complete theme asap</div>
