added adaptive version for page-header for page 'staff'

--- a/src/admin-courses.html
+++ b/src/admin-courses.html
@@ -67,10 +67,12 @@
             </ul>
           </div>
           <div class="col-md-6 col-sm-6 col-xs-12">
-            <a href="#" class="link-with-number">Announcements <span class="link-with-number__value">2</span></a>
-            <a href="#" class="btn btn--show-all user-courses__link">Show all announcements</a>
-            <div class="notice-text notice-text--success mobile-hide">22 Section added to course <a href="#">3998 Weather forecasts</a></div>
-            <div class="notice-text notice-text--danger mobile-hide">You have 2 overdue courses. Please, complete it asap.</div>
+            <div class="user-courses__announce">
+              <a href="#" class="link-with-number">Announcements <span class="link-with-number__value">2</span></a>
+              <a href="#" class="btn btn--show-all user-courses__link">Show all announcements</a>
+              <div class="notice-text notice-text--success mobile-hide">22 Section added to course <a href="#">3998 Weather forecasts</a></div>
+              <div class="notice-text notice-text--danger mobile-hide">You have 2 overdue courses. Please, complete it asap.</div>
+            </div>
           </div>
         </div>
         <ul class="user-courses__nav">
