--- a/src/admin-staff.html
+++ b/src/admin-staff.html
@@ -44,26 +44,30 @@
     </div>
   </header>
 
-  <div class="page-header">
+  <div class="page-header page-header--staff">
     <div class="container container--small">
       <div class="user-courses">
         <div class="row">
           <div class="col-md-6 col-sm-6 col-xs-12">
             <div class="user-courses__title h1">Staff <a href="#" class="btn btn--submit btn--add">Add employee</a></div>
             <div class="progress progress--success">
-              <div class="progress__bar" style="width: 70%">70%</div>
-              <div class="progress__text">16 of 20 courses passed</div>
+              <div class="progress__bar" style="width: 30%">30%</div>
+              <div class="progress__text">5 of 22 courses passed</div>
             </div>
-            <div class="status-text status-text--danger">2 employees overdue</div>
-            <div class="status-text status-text--warning">1 employee not started</div>
+            <div class="status-text__group">
+              <div class="status-text status-text--danger">2 employees overdue</div>
+              <div class="status-text status-text--warning">1 employee not started</div>
+            </div>
           </div>
           <div class="col-md-6 col-sm-6 col-xs-12">
-            <a href="#" class="link-with-number">Announcements <span class="link-with-number__value">8</span></a>
-            <a href="#" class="btn btn--show-all user-courses__link">Show all announcements</a>
-            <div class="notice-text notice-text--danger mobile-hide"><a href="#">Max Johnston</a> overdued 2 courses</div>
-            <div class="notice-text notice-text--success mobile-hide"><a href="#">Josh Young</a> completed all the courses</div>
-            <div class="notice-text notice-text--success mobile-hide"><a href="#">Adam Mccarthy</a> completed all the courses</div>
-            <div class="notice-text notice-text--warning mobile-hide"><a href="#">Allen Harris</a> added to system</div>
+            <div class="user-courses__announce">
+              <a href="#" class="link-with-number">Announcements <span class="link-with-number__value">8</span></a>
+              <a href="#" class="btn btn--show-all user-courses__link">Show all announcements</a>
+              <div class="notice-text notice-text--danger mobile-hide"><a href="#">Max Johnston</a> overdued 2 courses</div>
+              <div class="notice-text notice-text--success mobile-hide"><a href="#">Josh Young</a> completed all the courses</div>
+              <div class="notice-text notice-text--success mobile-hide"><a href="#">Adam Mccarthy</a> completed all the courses</div>
+              <div class="notice-text notice-text--warning mobile-hide"><a href="#">Allen Harris</a> added to system</div>
+            </div>
           </div>
         </div>
       </div>
