--- a/src/courses.html
+++ b/src/courses.html
@@ -49,10 +49,12 @@
             <div class="status-text status-text--warning">1 course not started</div>
           </div>
           <div class="col-md-6 col-sm-6 mobile-hide">
-            <a href="#" class="link-with-number">Announcements <span class="link-with-number__value">2</span></a>
-            <a href="#" class="btn btn--show-all user-courses__link">Show all announcements</a>
-            <div class="notice-text notice-text--success">2 Section added to course <a href="#">Weather forecasts</a>. They are marked as not completed now, please, complete theme asap</div>
-            <div class="notice-text notice-text--danger">You have 2 overdue courses. Please, complete it asap.</div>
+            <div class="user-courses__announce">
+              <a href="#" class="link-with-number">Announcements <span class="link-with-number__value">2</span></a>
+              <a href="#" class="btn btn--show-all user-courses__link">Show all announcements</a>
+              <div class="notice-text notice-text--success">2 Section added to course <a href="#">Weather forecasts</a>. They are marked as not completed now, please, complete theme asap</div>
+              <div class="notice-text notice-text--danger">You have 2 overdue courses. Please, complete it asap.</div>
+            </div>
           </div>
         </div>
         <ul class="user-courses__nav">
