--- a/src/admin-courses.html
+++ b/src/admin-courses.html
@@ -44,7 +44,7 @@
     </div>
   </header>
 
-  <div class="page-header page-header--courses">
+  <div class="page-header page-header--none">
     <div class="container container--small">
       <div class="user-courses">
         <div class="row">
