--- a/src/course.html
+++ b/src/course.html
@@ -84,7 +84,7 @@
               </div>
               <div class="course-brief__text">
                 <div class="course-brief__title-wrap"><span class="course-brief__title">Studying course</span></div>
-                <ul class="course-brief__list course-brief__list--left">
+                <ul class="course-brief__list">
                   <li class="course-brief__item">35% <span class="course-brief__status">(430/920 min)</span> watched</li>
                   <li class="course-brief__item">4/6 test passed</li>
                   <li class="course-brief__item">82% <span class="course-brief__status">(41/50)</span> correct answers</li>
