--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
       <li style="list-style: none; margin:15px 0 10px;"><b>ADMIN</b></li>
       <li><a href="admin-staff.html">Staff</a></li>
       <li><a href="admin-courses.html">Courses</a></li>
-      <!-- <li><a href="course-admin.html">Course page</a></li> -->
+      <li><a href="admin-course.html">Course page</a></li>
       <li><a href="admin-profile.html">Profile</a></li>
       <li><a href="instructor.html">Instructor page</a></li>
       <li><a href="instructors.html">Instructors</a></li>
